--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "@vue/compiler-core": "^3.2.33",
     "github-markdown-css": "^5.1.0",
     "prismjs": "^1.28.0",
-    "vue": "^3.0.0-rc.1",
+    "vue": "^3.0.0",
     "vue-router": "4.0.0-beta.3"
   },
   "devDependencies": {
-    "@vue/compiler-sfc": "^3.0.0-rc.1",
+    "@vue/compiler-sfc": "^3.0.0",
     "sass": "1.26.10",
     "vite": "^1.0.0-rc.1"
   }
